--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "jira_mcp"
+name = "personal-jira-mcp"
 version = "0.1.0"
 description = "JIRA MCP for querying JIRA details and lists"
 authors = [
@@ -33,7 +33,7 @@ dependencies = [
 ]
 
 [project.scripts]
-jira-mcp = "jira_mcp.server:main"
+personal-jira-mcp = "jira_mcp.server:main"
 
 [project.optional-dependencies]
 dev = [
@@ -43,9 +43,9 @@ dev = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/你的用户名/jira_mcp"
-"Bug Tracker" = "https://github.com/你的用户名/jira_mcp/issues"
-"Documentation" = "https://github.com/你的用户名/jira_mcp#readme"
+"Homepage" = "https://github.com/yuezheng2006/mcp-server-jira"
+"Bug Tracker" = "https://github.com/yuezheng2006/mcp-server-jira/issues"
+"Documentation" = "https://github.com/yuezheng2006/mcp-server-jira#readme"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/jira_mcp"]
@@ -58,4 +58,4 @@ line-length = 88
 target-version = ["py310"]
 
 [tool.uv]
-python-preference = "3.10.16" 
+python-preference = "system" 
